# prayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  linker.ld
isodir/boot/: kernel.elf
isodir/boot/grub/: grub.cfg
kernel/: exc.cpp  inter.cpp  keyboard.cpp  keys.cpp  kmain.cpp  pag.cpp  panic.cpp  time.cpp  vga.cpp
kernel/asm/: boot.asm  exc_asm.asm  gdt.asm  inter_asm.asm  pag_asm.asm
kernel/include/: color.h  exc.h  helper.h  inter.h  io.h  keyboard.h  keys.h  pag.h  panic.h  time.h  vga.h  vga_buffer.h  vga_color.h
kernel/include/shell/: command.h  shell.h
kernel/shell/: shell.cpp
kernel/shell/commands/: banner.cpp  clear.cpp  color.cpp  echo.cpp  fillc.cpp  help.cpp  math.cpp  pray.cpp  reboot.cpp  shutdown.cpp  uptime.cpp
kernel/vga/: vga_buffer.cpp
